2011-01-14  Chris Kühl  <chrisk@openismus.com>

	Initial wrapping of ClutterBoxLayout.

	* clutter/cluttermm.h: Added header file for new class.
	* clutter/src/box-layout.[hg|ccg]: Initial wrapping of ClutterBoxLayout.
	* clutter/src/clutter_signals.defs: Added properties for new class.
	* clutter/src/filelist.am: Added new classes to files_hg list.
	* codegen/extradefs/generate_extra_defs_clutter.cc: Added new class.
	* codegen/m4/convert_clutter.m4: Added enum conversion for BoxAlignment.

2011-01-13  Chris Kühl  <chrisk@openismus.com>

	Wrapped clutter_bin_layout_get_alignment.

	* clutter/src/bin-layout.hg: Wrapped clutter_bin_layout_get_alignment.
	* codegen/m4/convert_clutter.m4 Added conversion for ClutterBinAlignment.

2011-01-13  Chris Kühl  <chrisk@openismus.com>

	Initial wrapping of ClutterBinLayout.

	* clutter/cluttermm.h: Added header file for new class.
	* clutter/src/bin-layout.[hg|ccg]: Initial wrapping of ClutterBinLayout.
	* clutter/src/clutter_signals.defs: Added properties for new class.
	* clutter/src/filelist.am: Added new classes to files_hg list.
	* codegen/extradefs/generate_extra_defs_clutter.cc: Added new class.
	* codegen/m4/convert_clutter.m4: Added enum conversion for BinAlignment.

2011-01-12  Chris Kühl  <chrisk@openismus.com>

	Initial wrapping of ClutterFixedLayout class.

	* clutter/cluttermm.h: Added header file for new class.
	* clutter/src/clutter_signals.defs: Added properties for new class.
	* clutter/src/filelist.am: Added new classes to files_hg list.
	* clutter/src/fixed-layout.[hg|ccg]: Initial wrapping for
	ClutterFixedLayout.
	* codegen/extradefs/generate_extra_defs_clutter.cc: Added new class.

2011-01-12  Chris Kühl  <chrisk@openismus.com>

	Initial wrapping of ClutterBox class.

	* clutter/cluttermm.h: Added header file for new class.
	* clutter/src/clutter_signals.defs: Added properties for new class.
	* clutter/src/filelist.am: Added new classes to files_hg list.