@@ -1,5 +1,16 @@
 2011-01-14  Chris Kühl  <chrisk@openismus.com>
 
+	Initial wrapping of ClutterFlowLayout.
+
+	* clutter/cluttermm.h: Added header file for new class.
+	* clutter/src/flow-layout.[hg|ccg]: Initial wrapping of ClutterFlowLayout.
+	* clutter/src/clutter_signals.defs: Added properties for new class.
+	* clutter/src/filelist.am: Added new classes to files_hg list.
+	* codegen/extradefs/generate_extra_defs_clutter.cc: Added new class.
+	* codegen/m4/convert_clutter.m4: Added enum conversion for FlowOrientation.
+
+2011-01-14  Chris Kühl  <chrisk@openismus.com>
+
 	Initial wrapping of ClutterBoxLayout.
 
 	* clutter/cluttermm.h: Added header file for new class.
